# agentCli

./: .gitignore  README.md  pyproject.toml  run_demo.py  run_demo_debug.py  test_agent_loop.py  test_api.py  test_deepseek_tools.py  test_demo_adapter.py
docs/superpowers/plans/: 2026-05-09-deepseek-openai-integration.md  2026-05-09-source-reading-agent-mvp.md  2026-05-14-interactive-call-graph.md  2026-05-15-code-reading-storyline.md
docs/superpowers/specs/: 2026-05-09-source-reading-agent-design.md  2026-05-14-interactive-call-graph-design.md  2026-05-15-code-reading-storyline-design.md  2026-05-16-codetutor-conversational-code-reading-design.md
src/agentcli/: agent_loop.py  cli.py  config.py  models.py  repo_guard.py  runtime.py  session.py  session_store.py
src/agentcli/analysis/: __init__.py  cache.py  graph.py  models.py  project_map.py  project_scanner.py  result_parser.py  storyline.py  symbols.py  trace.py
tests/: test_agent_loop.py  test_analysis_result_parser.py  test_api_server.py  test_cache.py  test_chat_cli.py  test_cli.py  test_config.py  test_deepseek_adapter.py  test_engine_events.py  test_graph.py  test_notes_formatter.py  test_project_scanner.py  test_runtime.py  test_session.py  test_session_store.py  test_source_tools.py  test_storyline.py  test_storyline_api.py  test_trace.py  test_web_assets.py
tests/tools/: test_grep_text.py  test_list_directory.py  test_read_file.py  test_read_multiple_files.py  test_save_note.py  test_search_files.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  styles.css
(+61 files in other folders)
