[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcli"
version = "0.1.0"
description = "A source-reading agent CLI for understanding unfamiliar repositories."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.84,<2.0",
  "typer>=0.12,<1.0",
  "pydantic>=2.7,<3.0",
  "rich>=13.7,<14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
]

[project.scripts]
agentcli = "agentcli.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
